# STrace

./: .gitignore  README.md
.github/workflows/: build.yml
C/: README.md  STrace.sln  ntoskrnl.lib
C/AddNewEtwEventPlugin/: AddNewEtwEventPlugin.filters  AddNewEtwEventPlugin.vcxproj  AddNewEtwEventPlugin.vcxproj.filters  Interface.h  MyStdint.h  NtBuild.h  crt.cpp  dllmain.cpp  main.cpp  phantom_type.h  utils.h
C/AntiDebugPlugin/: AntiDebugPlugin.vcxproj  Interface.cpp  Interface.h  KernelApis.h  config.h  crt.cpp  crt.h  dllmain.cpp  magic_enum.hpp  probedefs.h  string.h  utils.h  vector.h
C/EtwCallbackPlugin/: EtwCallbackPlugin.vcxproj  EtwCallbackPlugin.vcxproj.filters  Interface.h  KernelApis.h  NtStructs.h  dllmain.cpp  main.cpp  string.h  vector.h
C/FileDeleteRecordPlugin/: FileDeleteRecordPlugin.vcxproj  FileDeleteRecordPlugin.vcxproj.filters  Interface.h  KernelApis.h  config.h  crt.h  dllmain.cpp  main.cpp  probedefs.h  utils.h
C/FileDeleteRecordPluginDriver/: FileDeleteRecordPluginDriver.cpp  FileDeleteRecordPluginDriver.inf  FileDeleteRecordPluginDriver.vcxproj  FileDeleteRecordPluginDriver.vcxproj.filters  Interface.cpp  Interface.h  Logger.cpp  main.cpp  utils.h
C/LogSyscallsPlugin/: Constants.h  Interface.h  KernelApis.h  LogSyscallsPlugin.vcxproj  LogSyscallsPlugin.vcxproj.filters  dllmain.cpp  magic_enum.hpp  main.cpp  probedefs.h  utils.h
C/LogSyscallsPluginDriver/: LogSyscallsPluginDriver.vcxproj  LogSyscallsPluginDriver.vcxproj.filters  main.cpp
C/STrace/: Constants.h  DynamicTrace.cpp  DynamicTrace.h  Etw.cpp  Etw.h  EtwLogger.cpp  EtwLogger.h  Interface.h  Logger.cpp  Logger.h  ManualMap.cpp  ManualMap.h  MyStdint.h  NtStructs.cpp  NtStructs.h  PluginData.h  STrace.vcxproj  STrace.vcxproj.filters  driver.cpp  (+1 more)
Rust/Driver/: Cargo.toml  Makefile.toml  build.rs  rustfmt.toml
Rust/Driver/.cargo/: config
Rust/Driver/src/: float.rs  lib.rs  log.rs  strace.rs
Rust/Driver/src/ntcompat/: basedef.rs  device_object.rs  dpc.rs  driver_object.rs  event.rs  file_object.rs  irp.rs  irql.rs  mod.rs  nt.rs  ntalloc.rs  object.rs  status.rs  string.rs
Rust/PDBReSym/: Cargo.toml
Rust/PDBReSym/src/: guid.rs  main.rs
Rust/StraceCore/: Cargo.toml
Rust/StraceCore/src/: lib.rs
blog/: STrace.md  STrace_DEFCON.pptx  Script.txt
install/: STraceApiSet.reg  STraceDriver.reg  dse_bcd.bat  install_as_admin.ps1
(+24 files in other folders)
