[profile.dev]
panic = "abort"
lto = "thin"
opt-level = 0
debug = 2
debug-assertions = true

[profile.release]
panic = "abort"
lto = "thin"
opt-level = 2
debug = 2
debug-assertions = true

[package]
name = "STrace"
version = "0.1.0"
authors = ["Stephen Eckels <stevemk14ebr@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
utf16_lit = "2.0.2"
bitflags = "1.2.1"
memoffset = "0.6"
spin = {version = "*", default-features=false}

[dependencies.ntapi]
version = "0.3.6"
default-features = false
features = [
    "impl-default",
    "kernel",
]

[dependencies.winapi]
version = "0.3.9"
features = [
    "winnt",
]

[dependencies.strace_core]
path = "../StraceCore"

[build-dependencies]
winreg = "0.9.0"
failure = "0.1.8"
