[package]
name = "PDBReSym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
goblin ="0.7"
reqwest = "0.11"
tokio = { version = "*", features = ["full"] }
bytes = "1.1"
anyhow = "1"
hex = "0.4"
pdb-addr2line = "0.10"
ouroboros = "0.17"
symbolic-demangle = "12"
symbolic-common = "12"
futures = "0.3.21"
clap = "3"
rangemap = { version = "1", features = ["serde1"] }
indicatif = "0.16"