[package]
name = "strace_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf16_lit = "2.0.2"
wasmi = {version = "*", default-features=false, features=["core", "reduced-stack-buffer"]}
lazy_static = {version = "1.4.0", features=["spin_no_std"]}